<resources>
    <string name="app_name">Tourist Information App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="value_manage_tourist">Manage Tourist</string>
    <string name="value_manage_services">Manage Services</string>
    <string name="title_latest_queries">Latest Queries</string>
    <string name="value_name">Name</string>
    <string name="value_username">Username</string>
    <string name="value_email">Email</string>
    <string name="value_contact">Contact</string>
    <string name="value_password">Password</string>
    <string name="value_re_enter_password">Re-enter Password</string>
    <string name="value_create_account">Create Account</string>
    <string name="value_already_a_member_login"><u>Already a member? Login</u></string>
    <string name="title_services">Services</string>
    <string name="title_tips">Tips</string>
    <string name="title_welcome_user_message">Welcome, %s</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_rescue">Rescue</string>
    <string name="title_guide">Guide/Porter</string>
    <string name="title_destination">Destination</string>
    <string name="title_police">Police Station</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="value_edit">Edit</string>
    <string name="value_delete">Delete</string>
    <string name="no_account_yet_create_one"><u>No account yet? Create one</u></string>
    <string name="value_login">Login</string>
    <string name="value_title">Title</string>
    <string name="value_address">Address</string>
    <string name="value_website">Website</string>
    <string name="title_service_type">Service Type</string>
    <string name="value_save">Save</string>
    <string name="title_image">Image</string>
    <string name="title_add_service">Add Service</string>
    <string name="title_add_tracking">Track Tourist</string>
    <string name="title_select_tourist">Select Tourist</string>
    <string name="title_tourist">Tourist</string>
    <string name="value_name_prefix">Name: %s</string>
    <string name="value_email_prefix">Email: %s</string>
    <string name="value_contact_prefix">Contact: %s</string>
    <string name="value_start_date">Start Date</string>
    <string name="value_end_date">End Date</string>
    <string name="title_profile">Profile</string>
    <string name="title_tracking_info">Tracking Info</string>
    <string name="value_track">Track</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_update_tracking">Update Tracking</string>
    <string name="value_update">Update</string>
    <string name="title_update_service">Update Service</string>
    <string name="title_request_service">Request Service</string>
    <string name="title_select_service">Select Service</string>
    <string name="title_service">Service</string>
    <string name="title_information">Information</string>
    <string name="value_description">Description</string>
    <string name="value_send">Send</string>
    <string name="title_service_colon">Service:</string>
    <string name="title_subject">Subject: %s</string>
    <string name="title_view_all">View All</string>
    <string name="title_queries">Queries</string>
    <string name="title_photo">Photo</string>
    <string name="value_subject">Subject</string>
    <string name="value_tracking_start_prefic">Start Date: %s</string>
    <string name="value_tracking_end_prefic">End Date: %s</string>
</resources>
