<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home_client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/iron"
                android:padding="8dp">

                <TextView
                    android:id="@+id/welcome_message"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_welcome_user_message"
                    android:textColor="@color/black" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/tracking_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_duration"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_tracking_info" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_gradient_drawable"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <!-- Start Date Label -->
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tracking_start_date"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/value_tracking_start_prefic"
                            android:textColor="@color/white" />

                        <!-- End Date Label -->
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tracking_end_date"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/value_tracking_end_prefic"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_services" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="4dp">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_hotel_black_24dp"
                    android:onClick="onHotelClick"
                    android:text="@string/title_hotel" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_local_hospital_black_24dp"
                    android:onClick="onHospitalClick"
                    android:text="@string/title_hospital" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_cancel_black_24dp"
                    android:onClick="onRescueClick"
                    android:text="@string/title_rescue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="4dp"
                android:paddingBottom="4dp">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_account_balance_black_24dp"
                    android:onClick="onPoliceStationClick"
                    android:text="@string/title_police" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_place_black_24dp"
                    android:onClick="onDestinationClick"
                    android:text="@string/title_destination" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.GridButton"
                    android:drawableTop="@drawable/ic_rowing_black_24dp"
                    android:onClick="onGuideClick"
                    android:text="@string/title_guide" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>