<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".client.RequestServiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/title_profile" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardCornerRadius="4dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Name Label -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_name_prefix" />

                    <!-- Email Label -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/email"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/value_email_prefix" />

                    <!-- Contact Label -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/contact"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/value_contact_prefix" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.8"
                android:text="@string/title_select_service" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:contentPadding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:gravity="top">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title_service"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/title_service" />

                    <!--Service tourist_spinner-->
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/tourist_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/title_service"
                        android:layout_alignBottom="@+id/title_service"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/title_service" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.8"
                android:text="@string/title_information" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardCornerRadius="4dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Start Date -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/value_subject"
                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- End Date -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/value_description"
                            android:inputType="textCapSentences|textShortMessage" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Add Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="onSendClicked"
                android:padding="12dp"
                android:text="@string/value_send"
                app:icon="@drawable/ic_near_me_black_24dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp" />


            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>